# workitem-editor

./: CLAUDE.md
api/: .env.example  Cargo.toml  README.md
api/migrations/: 20260404000000_initial.sql
api/src/: db.rs  errors.rs  lib.rs  main.rs
api/src/handlers/: epics.rs  mod.rs  team_members.rs  work_items.rs
api/src/models/: epic.rs  mod.rs  team_member.rs  work_item.rs
api/tests/: epics.rs  team_members.rs  work_items.rs
ui/: package-lock.json  package.json  playwright.config.ts  vite.config.ts
ui/e2e/: epics.spec.ts  team-members.spec.ts
ui/src/: main.tsx
ui/src/components/ui/: inline-combobox.tsx  select.tsx
ui/src/layouts/: root-layout.tsx
ui/src/lib/: api.ts
ui/src/pages/: epics.test.tsx  epics.tsx  home.tsx  team-members.test.tsx  team-members.tsx  work-items.tsx
ui/src/test/: handlers.ts  render.tsx  setup.ts
